fix(styles): hide column highlight on mobile webkit

--- a/src/app/game/column/column.component.scss
+++ b/src/app/game/column/column.component.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-direction: column-reverse;
 	height: 100%;
+	-webkit-tap-highlight-color: transparent;
 
 	app-slot {
 		flex: 1 1 auto;
